--- a/views/layouts/navigation.handlebars
+++ b/views/layouts/navigation.handlebars
@@ -22,7 +22,8 @@
                 </div>
                 <div class="col-md-2 col-md-push-2">
                     <div class="navbar-form navbar-right">
-                        <a href="/register" class="btn btn-primary">Регистрация</a>
+                        <a href="/signup" class="btn btn-primary btn-sm">Регистрация</a>
+                        <a href="/signin" class="btn btn-warning btn-sm">Вход</a>
                     </div>
                 </div>
             </div>
