--- a/views/layouts/navigation.handlebars
+++ b/views/layouts/navigation.handlebars
@@ -12,7 +12,7 @@
                 <a class="navbar-brand" href="/">Поиск студентов</a>
             </div>
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-md-5 col-sm-5 col-xs-4">
                     <form action="/" method="post" class="navbar-form navbar-right">
                         <div class="form-group">
                             <input type="text" name="text" class="form-control">
@@ -20,7 +20,7 @@
                         <button type="submit" class="btn btn-success">Найти</button>
                     </form>
                 </div>
-                <div class="col-md-2 col-md-push-2">
+                <div class="col-md-3 col-md-push-2">
                     <div class="navbar-form navbar-right">
                         <a href="/signup" class="btn btn-primary btn-sm">Регистрация</a>
                         <a href="/signin" class="btn btn-warning btn-sm">Вход</a>
